[gd_scene load_steps=3 format=3 uid="uid://b7h4w5vj6v2a"]

[ext_resource type="Script" uid="uid://c14mj7xo78o4r" path="res://hint_popup.gd" id="1_abcde"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abcde"]
bg_color = Color(0.15, 0.15, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HintPanel" type="Panel"]
theme_override_styles/panel = SubResource("StyleBoxFlat_abcde")
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hint description goes here."
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Next Hint"

[node name="DismissButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Dismiss"
